KAL-15: Use UID field for project lookup
